new fileds value showed to frontend

--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -641,7 +641,7 @@
   padding: 1.5rem;
   width: 90%;
   margin: 0 auto;
-  margin-top: -21rem;
+  margin-top: -70%;
   position: relative;
   z-index: 99;
 }
