--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -726,7 +726,8 @@
     padding: 1.5rem;
     width: 90%;
     margin: 0 auto;
-    margin-top: -21rem;
+    // margin-top: -21rem;
+    margin-top: -70%;
     position: relative;
     z-index: 99;
 
