--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -10,12 +10,15 @@
 }
 .course-single-item .course-thumb-box {
   position: relative;
-  min-height: 11rem;
+  height: 11rem;
 }
 .course-single-item .course-thumb-box img {
   flex: 1 0 0;
   align-self: stretch;
   border-radius: 0.5rem;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .course-single-item .course-thumb-box span.badge {
   position: absolute;
@@ -342,7 +345,7 @@ span.finsihLesson {
   border-radius: 0 !important;
 }
 .course-outline-wrap .accordion .accordion-item .lesson-wrap {
-  margin-left: 1rem;
+  margin-left: 0.5rem;
 }
 .course-outline-wrap .accordion .accordion-item .lesson-wrap a {
   color: var(--neutral-color-neutral-70, #2F3A4C);
@@ -2117,6 +2120,7 @@ span.finsihLesson {
   align-items: center;
   justify-content: space-between;
   padding-left: 2rem;
+  padding-right: 4.4rem;
 }
 .object-list-wrap .item .actions {
   min-width: 10%;
@@ -2196,6 +2200,104 @@ span.finsihLesson {
 }
 .add-object .btn-add i {
   margin-right: 0.5rem;
+}
+
+span.stripe-bg {
+  background: #F4F5F6;
+  border-radius: 0.75rem;
+  padding: 3px 2px 1px;
+  height: 27px;
+  margin-left: 0.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+span.stripe-bg i {
+  font-size: 1.8rem;
+  margin-left: 0.7rem;
+  color: #294cff;
+  line-height: 10px !important;
+}
+
+.circle-prog .cards .percent {
+  position: relative;
+  top: -0.7rem;
+}
+.circle-prog .cards svg {
+  position: relative;
+  transform: rotate(-90deg);
+  width: 70px;
+  height: 76px;
+}
+.circle-prog .cards svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #f0f0f0;
+  stroke-width: 4;
+  stroke-linecap: round;
+}
+.circle-prog .cards svg circle:last-of-type {
+  stroke-dasharray: 160px;
+  stroke-dashoffset: calc(160px - 160px * var(--percent) / 100);
+  stroke: #32BCA3;
+}
+.circle-prog .number {
+  position: absolute;
+  left: 45%;
+  top: 60%;
+  transform: translate(-60%, -45%);
+}
+.circle-prog .number h6 {
+  color: var(--neutral-90, #252525);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.circle-prog-big .cards .percent {
+  position: relative;
+  top: -0.7rem;
+}
+.circle-prog-big .cards svg {
+  position: relative;
+  transform: rotate(-90deg);
+  width: 170px;
+  height: 170px;
+}
+.circle-prog-big .cards svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #f0f0f0;
+  stroke-width: 10;
+  stroke-linecap: round;
+}
+.circle-prog-big .cards svg circle:last-of-type {
+  stroke-dasharray: 360px;
+  stroke-dashoffset: calc(360px - 360px * var(--percent) / 100);
+  stroke: #32BCA3;
+}
+.circle-prog-big .number {
+  position: absolute;
+  left: 50%;
+  top: 56%;
+  transform: translate(-60%, -45%);
+}
+.circle-prog-big .number h5 {
+  color: #fff;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+.circle-prog-big .number p {
+  color: var(--neutral-40, #E0E0E0);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
