--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -15,12 +15,14 @@
 
     .course-thumb-box {
         position: relative;
-        min-height: 11rem;
+        height: 11rem;
 
         img {
             flex: 1 0 0;
             align-self: stretch;
             border-radius: 0.5rem;
+            height: 100%;
+            object-fit: cover;
         }
 
         span.badge {
@@ -392,7 +394,7 @@ span.finsihLesson {
             border-radius: 0 !important;
 
             .lesson-wrap {
-                margin-left: 1rem;
+                margin-left: 0.5rem;
 
                 a {
                     color: var(--neutral-color-neutral-70, #2F3A4C);
@@ -2394,16 +2396,19 @@ span.finsihLesson {
 
     .item {
         position: relative;
-        .form-control { 
+
+        .form-control {
             border: 0;
             border-radius: 0;
             border-bottom: 1px solid #E0E0E0;
             padding: .8rem 0;
             margin-bottom: 1rem;
             align-items: center;
-            justify-content: space-between; 
+            justify-content: space-between;
             padding-left: 2rem;
+            padding-right: 4.4rem;
         }
+
         .actions {
             min-width: 10%;
             position: absolute;
@@ -2412,16 +2417,17 @@ span.finsihLesson {
         }
 
         i {
-            font-size: 1rem; 
+            font-size: 1rem;
             position: absolute;
             left: 0;
             bottom: 1rem;
-        } 
+        }
     }
-    .item.active{
-        .form-control {   
-            border: 1px solid #294CFF!important;
-            border-radius: 0.675rem 
+
+    .item.active {
+        .form-control {
+            border: 1px solid #294CFF !important;
+            border-radius: 0.675rem
         }
     }
 }
@@ -2485,6 +2491,148 @@ span.finsihLesson {
         }
     }
 }
+
+
+span.stripe-bg {
+    background: #F4F5F6;
+    border-radius: 0.75rem;
+    padding: 3px 2px 1px;
+    height: 27px;
+    margin-left: .5rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    i {
+        font-size: 1.8rem;
+        margin-left: 0.7rem;
+        color: #294cff;
+        line-height: 10px !important;
+    }
+}
+
+.circle-prog {
+
+    .cards .percent {
+        position: relative;
+        top: -0.7rem;
+    }
+
+    .cards svg {
+        position: relative;
+        transform: rotate(-90deg);
+        width: 70px;
+        height: 76px;
+    }
+
+    .cards svg circle {
+        width: 100%;
+        height: 100%;
+        fill: none;
+        stroke: #f0f0f0;
+        stroke-width: 4;
+        stroke-linecap: round;
+    }
+
+    .cards svg circle:last-of-type {
+        stroke-dasharray: 160px;
+        stroke-dashoffset: calc(160px - (160px * var(--percent)) / 100);
+        stroke: #32BCA3;
+    }
+
+    .number {
+        position: absolute;
+        left: 45%;
+        top: 60%;
+        transform: translate(-60%, -45%);
+
+        h6 {
+            color: var(--neutral-90, #252525);
+            font-size: 0.875rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+        }
+    }
+
+}
+
+.circle-prog-big {
+    .cards .percent {
+        position: relative;
+        top: -0.7rem;
+    }
+
+    .cards svg {
+        position: relative;
+        transform: rotate(-90deg);
+        width: 170px;
+        height: 170px;
+    }
+
+    .cards svg circle {
+        width: 100%;
+        height: 100%;
+        fill: none;
+        stroke: #f0f0f0;
+        stroke-width: 10;
+        stroke-linecap: round;
+    }
+
+    .cards svg circle:last-of-type {
+        stroke-dasharray: 360px;
+        stroke-dashoffset: calc(360px - (360px * var(--percent)) / 100);
+        stroke: #32BCA3;
+    }
+
+    .number {
+        position: absolute;
+        left: 50%;
+        top: 56%;
+        transform: translate(-60%, -45%);
+
+        h5 {
+            color: #fff;
+            font-size: 2rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 150%;
+        }
+
+        p {
+            color: var(--neutral-40, #E0E0E0); 
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; 
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
