--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -2300,6 +2300,10 @@ span.stripe-bg i {
   line-height: 150%;
 }
 
+#remove-audio {
+  display: none;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .course-title {
     padding: 1rem 0;
