--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1210,6 +1210,32 @@
   border: 1px solid var(--others-dark-stroke, #66768E);
   background: #0D0D0D;
 }
+.dark-mode .yearly-analitics {
+  border-radius: 0.5rem;
+  border: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #0D0D0D;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2);
+}
+.dark-mode .yearly-analitics h1 {
+  color: #D7DFEF;
+}
+.dark-mode .yearly-analitics button {
+  border-radius: 0.5rem;
+  border: 1px solid var(--others-dark-mode-btn, #7289FF);
+  background: #0D0D0D;
+  color: #7289FF !important;
+}
+.dark-mode .yearly-analitics .dropdown-menu {
+  border: 1px solid #1A1A1A !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
+}
+.dark-mode .yearly-analitics .dropdown-menu a {
+  color: #D7DFEF !important;
+}
+.dark-mode .yearly-analitics .dropdown-menu a:hover {
+  background-color: #313A49;
+}
 
 .dark-mode-bttn {
   z-index: 999999;
