--- a/public/latest/assets/admin-css/dashboard.css
+++ b/public/latest/assets/admin-css/dashboard.css
@@ -89,7 +89,7 @@ main .container-fluid {
   background: var(--background-light-paper, #FFF);
   box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
   padding: 1rem 1.5rem;
-  min-height: 95%;
+  min-height: 100%;
 }
 .top-performing-course .d-flex {
   align-items: center;
@@ -314,6 +314,36 @@ main .container-fluid {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+
+.course-progress-box {
+  position: relative;
+  margin-top: 1rem;
+}
+.course-progress-box .txt {
+  position: absolute;
+  left: 0;
+  top: 1rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.course-progress-box .txt h5 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2rem;
+}
+.course-progress-box .txt p {
+  color: var(--text-light-secondary, #637381);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.375rem;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
