--- a/public/latest/assets/admin-css/ins-dashboard.css
+++ b/public/latest/assets/admin-css/ins-dashboard.css
@@ -197,7 +197,7 @@
   background: var(--neutral-white, #FFF);
   box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
   padding: 1.5rem 1.125rem;
-  min-height: 90%;
+  min-height: 100%;
   position: relative;
 }
 .chart-box-wrap #course_earning {
@@ -288,6 +288,22 @@
 }
 .yearly-analitics button:focus, .yearly-analitics button:active {
   background-color: #E5ECF6;
+}
+.yearly-analitics .dropdown-menu {
+  border-radius: 0.375rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: var(--background-light-paper, #FFF);
+  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+  padding: 0.5rem;
+}
+.yearly-analitics .dropdown-menu .dropdown-item {
+  color: var(--neutral-color-neutral-70, #2F3A4C) !important;
+  font-size: 0.875rem !important;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  line-height: 1.375rem !important;
+  padding: 0.25rem 0.5rem !important;
+  border-radius: 0.375rem !important;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
