--- a/scss/ins-dashboard.scss
+++ b/scss/ins-dashboard.scss
@@ -222,7 +222,7 @@
     background: var(--neutral-white, #FFF);
     box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
     padding: 1.5rem 1.125rem;
-    min-height: 90%;
+    min-height: 100%;
     position: relative;
 
     #course_earning {
@@ -303,26 +303,45 @@
         border-radius: 0.5rem;
         border: 1px solid var(--primary-color-blue-light, #3D5CFF);
         background: var(--neutral-white, #FFF);
-        color: var(--primary-color-blue-light, #3D5CFF); 
+        color: var(--primary-color-blue-light, #3D5CFF);
         font-size: 0.875rem;
         font-style: normal;
         font-weight: 500;
-        line-height: 1.25rem; 
+        line-height: 1.25rem;
         display: inline-flex;
         align-items: center;
         justify-content: center;
         padding: 0.625rem 0.875rem;
 
-        img{
+        img {
             margin-right: 0.5rem;
         }
 
-        &:hover{
+        &:hover {
             background-color: #E5ECF6;
         }
+
         &:focus,
-        &:active{
-            background-color: #E5ECF6; 
+        &:active {
+            background-color: #E5ECF6;
+        }
+    }
+
+    .dropdown-menu {
+        border-radius: 0.375rem;
+        border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+        background: var(--background-light-paper, #FFF);
+        box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+        padding: 0.5rem;
+
+        .dropdown-item {
+            color: var(--neutral-color-neutral-70, #2F3A4C) !important;
+            font-size: 0.875rem !important;
+            font-style: normal !important;
+            font-weight: 400 !important;
+            line-height: 1.375rem !important;
+            padding: 0.25rem 0.5rem !important;
+            border-radius: 0.375rem !important;
         }
     }
 }
