--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -88,7 +88,7 @@
     li {
         text-align: center;
         border-right: 1px solid rgba(0, 0, 0, 0.10);
-        padding-right: 1.5rem;
+        padding: 0 0.75rem;
 
         &:last-child {
             border-right: 0;
@@ -1084,7 +1084,7 @@
     border-radius: 0.5rem;
     background: var(--background-light-paper, #FFF);
     box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.20);
-    min-height: 95%;
+    min-height: 100%;
 
     .d-flex {
         align-items: center;
@@ -1213,7 +1213,11 @@
                     }
                 }
             }
-
+            &:last-child{
+                td{
+                    border-bottom: 0px solid transparent;
+                }
+            }
 
         }
     }
@@ -1228,10 +1232,14 @@
     } 
 }
 
+.fixed-height{
+    @include m.df(space-between);
+    flex-direction: column; 
+}
 
-
-
-
+.timeSpendingChart{
+    min-height: 300px!important;
+}
 
 
 
