--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -1088,8 +1088,41 @@
   flex-direction: column;
 }
 
-.timeSpendingChart {
-  min-height: 300px !important;
+#legend {
+  list-style: none;
+  padding: 0;
+  width: 100%;
+}
+
+#legend ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#legend li p {
+  color: var(--text-light-secondary, #637381);
+  font-size: 0.8rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+}
+
+#legend li h6 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  padding-left: 1rem;
+}
+
+#legend li span {
+  display: inline-block;
+  width: 0.75rem;
+  height: 0.75rem;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
