--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -1099,30 +1099,55 @@
   align-items: center;
   justify-content: space-around;
 }
-
-#legend li p {
+#legend ul li {
+  position: relative;
+}
+#legend ul li:before {
+  position: absolute;
+  content: "";
+  right: -1rem;
+  top: 0;
+  height: 100%;
+  width: 1px;
+  background: rgba(0, 0, 0, 0.1);
+}
+#legend ul li:last-child:before {
+  width: 0;
+  height: 0;
+}
+#legend ul li p {
   color: var(--text-light-secondary, #637381);
-  font-size: 0.8rem;
+  font-size: 0.85rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.125rem;
+  display: flex;
+  align-items: center;
 }
-
-#legend li h6 {
-  color: var(--text-light-primary, #212B36);
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.5rem;
-  padding-left: 1rem;
-}
-
-#legend li span {
+#legend ul li p span {
   display: inline-block;
   width: 0.75rem;
   height: 0.75rem;
   border-radius: 50%;
   margin-right: 5px;
+}
+#legend ul li h6 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  padding-left: 1.1rem;
+}
+
+.center-legend ul {
+  justify-content: center !important;
+}
+.center-legend ul li {
+  margin: 0 1.5rem;
+}
+.center-legend ul li:before {
+  right: -1.5rem !important;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
