--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -1150,6 +1150,53 @@
   right: -1.5rem !important;
 }
 
+.liked-courses .media img.thumab {
+  width: 9.3125rem;
+  border-radius: 0.5rem;
+}
+.liked-courses .media p.user {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 1.5rem */
+}
+.liked-courses .media p.lessons {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 155%;
+}
+.liked-courses .dropdown .dropdown-menu {
+  border-radius: 0.375rem;
+  background: var(--background-light-paper, #FFF);
+  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.15), 0px 0px 2px 0px rgba(145, 158, 171, 0.15);
+  width: 6.6875rem !important;
+  min-width: 6.6875rem !important;
+  max-width: 6.6875rem !important;
+  padding: 0.5rem;
+}
+.liked-courses .dropdown .dropdown-menu li {
+  display: block !important;
+}
+.liked-courses .dropdown .dropdown-menu li .dropdown-item {
+  overflow: hidden;
+  color: #F04755;
+  text-overflow: ellipsis;
+  font-size: 0.875rem;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  padding: 3px 8px !important;
+  border-radius: 6px !important;
+  line-height: 1.375rem !important;
+  width: 100% !important;
+  display: block !important;
+}
+.liked-courses .dropdown .dropdown-menu li:last-child a {
+  color: #08B595;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .student-courses-lists-pages .course-ol-box {
     left: 0%;
