--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -1246,11 +1246,12 @@
 
 #legend {
     ul {
-        @include m.df(space-around); 
+        @include m.df(space-around);
 
         li {
             position: relative;
-            &:before{
+
+            &:before {
                 position: absolute;
                 content: "";
                 right: -1rem;
@@ -1260,12 +1261,13 @@
                 background: rgba(0, 0, 0, 0.10);
             }
 
-            &:last-child{
-                &:before{
+            &:last-child {
+                &:before {
                     width: 0;
                     height: 0;
                 }
             }
+
             p {
                 color: var(--text-light-secondary, #637381);
                 font-size: 0.85rem;
@@ -1296,21 +1298,79 @@
     }
 }
 
-.center-legend{
-    ul{
-        justify-content: center!important;
+.center-legend {
+    ul {
+        justify-content: center !important;
 
-        li{
+        li {
             margin: 0 1.5rem;
 
-            &:before{
-                right: -1.5rem!important;
+            &:before {
+                right: -1.5rem !important;
             }
         }
     }
 }
 
+.liked-courses {
+    .media {
+        img.thumab {
+            width: 9.3125rem;
+            border-radius: 0.5rem;
+        }
 
+        p.user{
+            color: var(--neutral-color-neutral-60, #66768E);
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; /* 1.5rem */
+        }
+
+        p.lessons {
+            color: var(--neutral-color-neutral-60, #66768E); 
+            font-size: 0.875rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 155%; 
+        }
+    }
+
+    .dropdown {
+        .dropdown-menu {
+            border-radius: 0.375rem;
+            background: var(--background-light-paper, #FFF);
+            box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.15), 0px 0px 2px 0px rgba(145, 158, 171, 0.15);
+            width: 6.6875rem !important;
+            min-width: 6.6875rem !important;
+            max-width: 6.6875rem !important;
+            padding: 0.5rem;
+
+            li {
+                display: block!important;
+                .dropdown-item {
+                    overflow: hidden;
+                    color: #F04755;
+                    text-overflow: ellipsis;
+                    font-size: 0.875rem;
+                    font-style: normal!important;
+                    font-weight: 400!important;
+                    padding: 3px 8px!important; 
+                    border-radius: 6px!important;
+                    line-height: 1.375rem!important;
+                    width: 100%!important;
+                    display: block!important;
+                }
+
+                &:last-child {
+                    a {
+                        color: #08B595;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
