--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -2304,6 +2304,26 @@ span.stripe-bg i {
   display: none;
 }
 
+.brdr-bottom-1 {
+  border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+}
+
+.sold-item {
+  border-radius: 0.125rem;
+  border: 1px solid #DFE4FF;
+  background: #E7EBFF;
+  color: #596BC3;
+  font-size: 0.625rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  display: inline-flex;
+  align-items: center;
+  padding: 0rem 0.5rem;
+  text-align: center;
+  height: 1.375rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .course-title {
     padding: 1rem 0;
