--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -2600,17 +2600,37 @@ span.stripe-bg {
         }
 
         p {
-            color: var(--neutral-40, #E0E0E0); 
+            color: var(--neutral-40, #E0E0E0);
             font-size: 1rem;
             font-style: normal;
             font-weight: 400;
-            line-height: 150%; 
+            line-height: 150%;
         }
     }
 }
 
 #remove-audio {
     display: none;
+}
+
+.brdr-bottom-1 {
+    border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+}
+
+.sold-item {
+    border-radius: 0.125rem;
+    border: 1px solid #DFE4FF;
+    background: #E7EBFF;
+    color: #596BC3; 
+    font-size: 0.625rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%; 
+    display: inline-flex;
+    align-items: center;
+    padding: 0rem 0.5rem;
+    text-align: center;
+    height: 1.375rem;
 }
 
 
