--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1522,7 +1522,7 @@
     }
 
     .filter-dropdown-box .dropdown .dropdown-menu li .dropdown-item:hover {
-        background-color: #66768E !important;
+        background-color: #111 !important;
     }
 
     .no-data-found {
@@ -1612,8 +1612,13 @@
         }
     }
 
-    .brdr-bottom-1{
+    .brdr-bottom-1 {
         border-color: #1A1A1A;
+    }
+
+    .sold-item { 
+        border: 1px solid #000A39;
+        background: #191919;
     }
 }
 
