--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1620,6 +1620,13 @@
         border: 1px solid #000A39;
         background: #191919;
     }
+
+    .top-card-box span{
+        color: #4BC828!important;
+    }
+    .top-card-box span.red{
+        color: #EF6E79!important;
+    }
 }
 
 
