--- a/public/latest/assets/admin-css/subscription.css
+++ b/public/latest/assets/admin-css/subscription.css
@@ -251,6 +251,9 @@
   right: 1rem;
   top: 1rem;
 }
+.top-card-box span.red {
+  color: #ED5763 !important;
+}
 
 .earning-table {
   border-radius: 0.5rem;
@@ -261,6 +264,21 @@
 
 .package-new-header {
   grid-template-columns: 70% 15% 15%;
+}
+
+.form-selecting {
+  position: relative;
+}
+.form-selecting i.fa-angle-down {
+  position: absolute;
+  right: 1rem;
+  top: 3rem;
+}
+
+.btn-export {
+  border-radius: 0.375rem;
+  background: rgba(50, 188, 163, 0.2);
+  color: #03876F;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
