--- a/scss/subscription.scss
+++ b/scss/subscription.scss
@@ -283,14 +283,18 @@
     }
 
     span {
-        color: var(--success-green, #43B324); 
+        color: var(--success-green, #43B324);
         font-size: 1.5rem;
         font-style: normal;
         font-weight: 400;
-        line-height: 120%; 
+        line-height: 120%;
         position: absolute;
         right: 1rem;
         top: 1rem;
+    }
+
+    span.red {
+        color: #ED5763 !important;
     }
 }
 
@@ -305,10 +309,22 @@
     grid-template-columns: 70% 15% 15%;
 }
 
+.form-selecting {
+    position: relative;
+
+    i.fa-angle-down {
+        position: absolute;
+        right: 1rem;
+        top: 3rem;
+    }
+}
 
 
-
-
+.btn-export {
+    border-radius: 0.375rem;
+    background: rgba(50, 188, 163, 0.20);
+    color: #03876F;
+}
 
 
 
