--- a/scss/user.scss
+++ b/scss/user.scss
@@ -79,7 +79,7 @@
     box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.20);
     padding: 1rem 2rem 2.5rem;
     text-align: center;
-    margin-bottom: 2rem; 
+    margin-bottom: 2rem;
 
     .btn-ellipse {
         border-radius: 3.125rem;
@@ -1911,11 +1911,11 @@
     }
 
     p {
-        color: var(--gray-500, #667085); 
+        color: var(--gray-500, #667085);
         font-size: 0.875rem;
         font-style: normal;
         font-weight: 400;
-        line-height: 1.25rem; 
+        line-height: 1.25rem;
         margin-top: 1rem;
     }
 
@@ -1937,7 +1937,14 @@
     }
 }
 
-
+.view-course-bttn {
+    color: var(--primary-color-blue, #294CFF);
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.125rem; 
+    display: inline-block;
+}
 
 
 
