--- a/public/latest/assets/admin-css/ins-dashboard.css
+++ b/public/latest/assets/admin-css/ins-dashboard.css
@@ -307,6 +307,38 @@
   border-radius: 0.375rem !important;
 }
 
+.course-status-filter .btn {
+  border-radius: 0.375rem;
+  background: var(--transparent-grey-8, rgba(145, 158, 171, 0.08));
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.375rem;
+  padding: 0.1875rem 0.25rem 0.1875rem 0.5rem;
+  border: 0;
+  height: 1.8rem;
+  margin-left: 1rem;
+  min-width: 7rem;
+  text-align: left;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.course-status-filter .dropdown-menu {
+  padding: 0.5rem !important;
+}
+.course-status-filter .dropdown-menu .dropdown-item {
+  background-color: transparent;
+  color: var(--neutral-color-neutral-70, #2F3A4C) !important;
+  font-size: 0.875rem !important;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  line-height: 1.375rem !important;
+  padding: 0.25rem 0.5rem !important;
+  border-radius: 0.375rem !important;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .recent-payment-box,
   .my-courses-box,
