theme settings image upload delte reset and auth pages theme dynamic and password reset page done

--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -2638,6 +2638,7 @@ span.stripe-bg {
     .filter-dropdown-box{
         width: 64%!important;
         margin-right: 1rem!important;
+        color: #f4f8fc;
     } 
 }
 
