--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1254,6 +1254,44 @@
 .dark-mode .top-card-box span.red {
   color: #EF6E79 !important;
 }
+.dark-mode .access-page-box {
+  border: 1px solid #2D343E;
+  background: #0D0D0D;
+}
+.dark-mode .access-page-box .page-box {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #0D0D0D;
+}
+.dark-mode .access-page-box .action h6 {
+  color: #7289FF !important;
+}
+.dark-mode .access-page-box .action .form-check-input:checked {
+  background-color: #7289FF;
+  border-color: #7289FF;
+}
+.dark-mode .access-page-box .save-bttns {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.dark-mode .access-page-box .save-bttns .btn-cancel {
+  border: 1px solid var(--gray-700, #344054);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  color: #98A2B3;
+}
+.dark-mode .access-page-box .save-bttns .btn-cancel:hover {
+  background-color: #7289FF;
+  color: #fff;
+}
+.dark-mode .access-page-box .save-bttns .btn-submit {
+  background-color: #7289FF;
+  color: #0D0D0D;
+}
+.dark-mode .access-page-box .save-bttns .btn-submit:hover {
+  background-color: #101C2D;
+  color: #fff;
+  border-color: #7289FF;
+}
 
 .dark-mode-bttn {
   z-index: 999999;
