--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1616,16 +1616,66 @@
         border-color: #1A1A1A;
     }
 
-    .sold-item { 
+    .sold-item {
         border: 1px solid #000A39;
         background: #191919;
     }
 
-    .top-card-box span{
-        color: #4BC828!important;
+    .top-card-box span {
+        color: #4BC828 !important;
     }
-    .top-card-box span.red{
-        color: #EF6E79!important;
+
+    .top-card-box span.red {
+        color: #EF6E79 !important;
+    }
+
+    .access-page-box {
+        border: 1px solid #2D343E;
+        background: #0D0D0D;
+
+        .page-box {
+            border: 1px solid var(--others-dark-stroke, #1A1A1A);
+            background: #0D0D0D; 
+        } 
+
+        .action {
+            h6 {
+                color: #7289FF!important;
+            } 
+
+            .form-check-input:checked {
+                background-color: #7289FF;
+                border-color: #7289FF;
+            }
+        }
+
+        .save-bttns {
+            margin-top: 2rem;
+            display: grid;
+            grid-template-columns: 50% 50%;
+    
+            .btn-cancel { 
+                border: 1px solid var(--gray-700, #344054); 
+                box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+                color: #98A2B3;
+    
+                &:hover{
+                    background-color: #7289FF;
+                    color: #fff;
+                }
+            }
+    
+            .btn-submit {
+                background-color: #7289FF;
+                color: #0D0D0D;
+    
+                &:hover{
+                    background-color: #101C2D;
+                    color: #fff;
+                    border-color: #7289FF;
+                }
+            }
+        }
     }
 }
 
